<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/instructions_v3"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <CheckBox
                    android:text="@string/v3_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v3_1"
                    android:layout_weight="1" />

                <CheckBox
                    android:text="@string/v3_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v3_2"
                    android:layout_weight="1" />

                <CheckBox
                    android:text="@string/v3_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v3_3"
                    android:layout_weight="1" />

                <CheckBox
                    android:text="@string/v3_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v3_4"
                    android:layout_weight="1" />

                <CheckBox
                    android:text="@string/v3_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v3_5"
                    android:layout_weight="1" />

                <CheckBox
                    android:text="@string/v3_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v3_6"
                    android:layout_weight="1" />

                <CheckBox
                    android:text="@string/v3_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v3_7"
                    android:layout_weight="1" />

                <CheckBox
                    android:text="@string/v3_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v3_8"
                    android:layout_weight="1" />

                <CheckBox
                    android:text="@string/v3_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v3_9"
                    android:layout_weight="1" />

                <CheckBox
                    android:text="@string/v3_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v3_10"
                    android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/esm_buttons_controls"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/v3_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/next" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>