<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/instructions_v1"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:id="@+id/v1_radio_group">

                <RadioButton
                    android:text="@string/v1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v1_1"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/v1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v1_2"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/v1_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v1_3"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/v1_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v1_4"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/v1_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v1_5"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/v1_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v1_6"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/v1_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v1_7"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/v1_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v1_8"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/v1_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/v1_9"
                    android:layout_weight="1" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/esm_buttons_controls"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/v1_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/next" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>